Fix CONTENT_EXTENSIONS_STATE_MACHINE_DEBUGGING https://bugs.webkit.org/show_bug.cgi?id=146879

Reviewed by Andreas Kling.

Some of my recent changes broke CONTENT_EXTENSIONS_STATE_MACHINE_DEBUGGING :(

* contentextensions/CombinedURLFilters.cpp:
(WebCore::ContentExtensions::prefixTreeVertexToString):
(WebCore::ContentExtensions::recursivePrint):
(WebCore::ContentExtensions::CombinedURLFilters::print):
* contentextensions/ContentExtensionsDebugging.h:
* contentextensions/DFA.cpp:
(WebCore::ContentExtensions::DFA::debugPrintDot):


Canonical link: https://commits.webkit.org/164952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186715 268f45cc-cd09-0410-ab3c-d52691b4dbfc